--- a/composer.json
+++ b/composer.json
@@ -82,6 +82,16 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "start": [
+            "Composer\\Config::disableProcessTimeout",
+            "symfony serve"
+        ],
+        "test:phpcs": [
+            "php-cs-fixer fix --dry-run"
+        ],
+        "fix:phpcs": [
+            "php-cs-fixer fix"
         ]
     },
     "conflict": {
@@ -94,6 +104,7 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.64",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.3.*",
         "symfony/css-selector": "6.3.*",
