--- a/composer.json
+++ b/composer.json
@@ -92,6 +92,12 @@
         ],
         "fix:phpcs": [
             "php-cs-fixer fix"
+        ],
+        "test:twigcs": [
+            "twig-cs-fixer lint"
+        ],
+        "fix:twigcs": [
+            "php vendor/bin/twig-cs-fixer fix"
         ]
     },
     "conflict": {
@@ -112,6 +118,7 @@
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^7.1",
         "symfony/stopwatch": "6.3.*",
-        "symfony/web-profiler-bundle": "6.3.*"
+        "symfony/web-profiler-bundle": "6.3.*",
+        "vincentlanglet/twig-cs-fixer": "^2.12"
     }
 }
