--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.3",
         "dompdf/dompdf": "^3.0",
+        "easycorp/easyadmin-bundle": "^4.18",
         "phpdocumentor/reflection-docblock": "^5.5",
         "phpstan/phpdoc-parser": "^1.33",
         "symfony/asset": "6.3.*",
