--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "symfony/runtime": "6.3.*",
         "symfony/security-bundle": "6.3.*",
         "symfony/serializer": "6.3.*",
-        "symfony/stimulus-bundle": "^2.21",
+        "symfony/stimulus-bundle": "^2.22",
         "symfony/string": "6.3.*",
         "symfony/translation": "6.3.*",
         "symfony/twig-bundle": "6.3.*",
@@ -44,6 +44,7 @@
         "symfony/validator": "6.3.*",
         "symfony/web-link": "6.3.*",
         "symfony/yaml": "6.3.*",
+        "symfonycasts/dynamic-forms": "^0.1.3",
         "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.8",
@@ -115,6 +116,11 @@
             "php bin/console doctrine:database:create --quiet --env=test",
             "php bin/console doctrine:schema:create --quiet --env=test",
             "php vendor/bin/codecept run"
+        ],
+        "test": [
+            "@test:phpcs",
+            "@test:twigcs",
+            "@test:codeception"
         ]
     },
     "conflict": {
